; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_JsonNewStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Str.c_JsonNewStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @JsonNewStr(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* null, i8** %4, align 8
  store i32 0, i32* %6, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %35

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @StrLen(i8* %11)
  store i32 %12, i32* %6, align 4
  %13 = load i8*, i8** %3, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @is_valid_utf8(i8* %13, i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %10
  store i32* null, i32** %2, align 8
  br label %35

18:                                               ; preds = %10
  %19 = load i8*, i8** %3, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i8* @parson_strndup(i8* %19, i32 %20)
  store i8* %21, i8** %4, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = icmp eq i8* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %18
  store i32* null, i32** %2, align 8
  br label %35

25:                                               ; preds = %18
  %26 = load i8*, i8** %4, align 8
  %27 = call i32* @json_value_init_string_no_copy(i8* %26)
  store i32* %27, i32** %5, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %33

30:                                               ; preds = %25
  %31 = load i8*, i8** %4, align 8
  %32 = call i32 @parson_free(i8* %31)
  br label %33

33:                                               ; preds = %30, %25
  %34 = load i32*, i32** %5, align 8
  store i32* %34, i32** %2, align 8
  br label %35

35:                                               ; preds = %33, %24, %17, %9
  %36 = load i32*, i32** %2, align 8
  ret i32* %36
}

declare dso_local i32 @StrLen(i8*) #1

declare dso_local i32 @is_valid_utf8(i8*, i32) #1

declare dso_local i8* @parson_strndup(i8*, i32) #1

declare dso_local i32* @json_value_init_string_no_copy(i8*) #1

declare dso_local i32 @parson_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
